kube/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubecounter-server
  namespace: kubecounter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubecounter-server
  template:
    metadata:
      labels:
        app: kubecounter-server
    spec:
      containers:
        - name: kubecounter-server
          image: mmaous/kubecounter:server
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
