kube/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubecounter-svc
  namespace: kubecounter
spec:
  selector:
    app: kubecounter-server
  ports:
    - port: 8080
